# CaddyStats

./: .env.example  .gitignore  .prettierrc  API_TESTING.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  ENVIRONMENT_SETUP.md  LOCAL_DEVELOPMENT.md  Makefile  QUICKREF.md  README.md  dev.cmd  dev.sh  docker-compose.test.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.copilot-tracking/: README.md
.githooks/: pre-commit
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
Planning/: App Assets & Attributes Matrix.md  Documentation System Foundation.md  Master Task List Consolidated.md  Master Task List Phase 0.md  Master Task List Phase 1.md  Master Task List Phase 10.md  Master Task List Phase 11.md  Master Task List Phase 12.md  Master Task List Phase 2.md  Master Task List Phase 3.md  Master Task List Phase 4.md  Master Task List Phase 5.md  Master Task List Phase 6.md  Master Task List Phase 7.md  Master Task List Phase 8.md  Master Task List Phase 9.md  Master Task List Phase X.md  Stack Environments & Connectivity.md  build-system.md
agents/: project-architecture-planner.agent.md  project-intake-doc-agent.md
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/versions/: 20260513_0001_database_foundation.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  base.py
backend/app/middleware/: request_id.py
backend/requirements/: base.txt  dev.txt
backend/scripts/database/: seed.py
(+761 files in other folders)
